Fix CORS origin wildcard issue